--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.1.1",
+    "nth-check": "^2.1.1",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.10",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
+  },
+  "resolutions": {
+    "nth-check": "^2.1.1"
   },
   "homepage": "https://cgsnascar.dev/",
   "scripts": {
