--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "resolutions": {
     "nth-check": "^2.1.1"
   },
-  "homepage": "127.0.0.1",
+  "homepage": "https://cgsnascar.dev/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
