--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.10",
     "web-vitals": "^4.2.4"
